syntax = "proto3";

package messages_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service MessageService {
  rpc Produce(ProduceRequest) returns (google.protobuf.Empty);
  rpc Consume(ConsumeRequest) returns (stream Message); 
}

message Message {
  bytes uuid = 1;
  optional string routing_key = 2;
  bytes payload = 3;
  optional MessageMetadata metadata = 4;
}

message MessageMetadata {
  optional google.protobuf.Timestamp client_time = 1;
  map<string, string> headers = 2;
}

message ProduceRequest {
  string exchange = 1;
  Message message = 2;
}

message ConsumeRequest {
  string queue_name = 1;
  optional uint32 prefetch_count = 2;
}